--- a/nuxt-shop/package.json
+++ b/nuxt-shop/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/fonts": "^0.11.4",
+    "@nuxt/icon": "^2.1.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.13.0",
     "@unhead/vue": "^2.0.19",
