--- a/nuxt-shop/package.json
+++ b/nuxt-shop/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "^1.13.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.13.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@unhead/vue": "^2.0.19",
     "eslint": "^9.38.0",
     "nuxt": "^3.19.3",
